[gd_scene load_steps=30 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/GameController.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
resource_local_to_scene = true
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "-"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "1"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "2"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "3"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=14]
action = "4"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="InputEventAction" id=16]
action = "5"

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="InputEventAction" id=18]
action = "6"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventAction" id=20]
action = "7"

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[sub_resource type="InputEventAction" id=22]
action = "8"

[sub_resource type="ShortCut" id=23]
shortcut = SubResource( 22 )

[sub_resource type="InputEventAction" id=24]
action = "9"

[sub_resource type="ShortCut" id=25]
shortcut = SubResource( 24 )

[sub_resource type="InputEventAction" id=26]
action = "0"

[sub_resource type="ShortCut" id=27]
shortcut = SubResource( 26 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 176, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Mundo" type="Node2D"]
position = Vector2( 0, -32 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Send" type="Button" parent="."]
margin_left = 163.0
margin_top = 182.0
margin_right = 183.0
margin_bottom = 202.0
rect_scale = Vector2( 0.49787, 0.459773 )
shortcut = SubResource( 5 )
text = "^"
icon_align = 1

[node name="Button-" type="Button" parent="."]
margin_top = 208.0
margin_right = 20.0
margin_bottom = 228.0
shortcut = SubResource( 7 )
text = "-"

[node name="Button1" type="Button" parent="."]
margin_left = 32.0
margin_top = 208.0
margin_right = 52.0
margin_bottom = 228.0
shortcut = SubResource( 9 )
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 64.0
margin_top = 208.0
margin_right = 84.0
margin_bottom = 228.0
shortcut = SubResource( 11 )
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 96.0
margin_top = 208.0
margin_right = 116.0
margin_bottom = 228.0
shortcut = SubResource( 13 )
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 128.0
margin_top = 208.0
margin_right = 148.0
margin_bottom = 228.0
shortcut = SubResource( 15 )
text = "4"

[node name="Button5" type="Button" parent="."]
margin_left = 160.0
margin_top = 208.0
margin_right = 180.0
margin_bottom = 228.0
shortcut = SubResource( 17 )
text = "5"

[node name="Button6" type="Button" parent="."]
margin_left = 192.0
margin_top = 208.0
margin_right = 212.0
margin_bottom = 228.0
shortcut = SubResource( 19 )
text = "6"

[node name="Button7" type="Button" parent="."]
margin_left = 224.0
margin_top = 208.0
margin_right = 244.0
margin_bottom = 228.0
shortcut = SubResource( 21 )
text = "7"

[node name="Button8" type="Button" parent="."]
margin_left = 256.0
margin_top = 208.0
margin_right = 276.0
margin_bottom = 228.0
shortcut = SubResource( 23 )
text = "8"

[node name="Button9" type="Button" parent="."]
margin_left = 288.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 228.0
shortcut = SubResource( 25 )
text = "9"

[node name="Button0" type="Button" parent="."]
margin_left = 320.0
margin_top = 208.0
margin_right = 340.0
margin_bottom = 228.0
shortcut = SubResource( 27 )
text = "0"

[node name="Resultado" type="Label" parent="."]
margin_left = 144.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 176.0
text = "00"
align = 1
valign = 1

[node name="Muro" type="Area2D" parent="."]
position = Vector2( 169, 200 )

[node name="Icon" type="Sprite" parent="Muro"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 5.4375, 0.171875 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="Muro"]
position = Vector2( -1.52588e-05, 1 )
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 168, 184 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 0
collision_mask = 0

[node name="sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Spawn" type="Area2D" parent="."]
position = Vector2( 168, 283 )

[node name="collision" type="CollisionShape2D" parent="Spawn"]
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Send" to="." method="_on_Send_button_down"]
[connection signal="button_down" from="Button-" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button1" to="." method="_on_Button1_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
[connection signal="button_down" from="Button5" to="." method="_on_Button5_button_down"]
[connection signal="button_down" from="Button6" to="." method="_on_Button6_button_down"]
[connection signal="button_down" from="Button7" to="." method="_on_Button7_button_down"]
[connection signal="button_down" from="Button8" to="." method="_on_Button8_button_down"]
[connection signal="button_down" from="Button9" to="." method="_on_Button9_button_down"]
[connection signal="button_down" from="Button0" to="." method="_on_Button0_button_down"]
